--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
 <body>
     
     <div id="stamp"></div>
+    <div id="risultati"></div>
+    <div id="numeriIndovinati"></div>
 
     <script type="text/javascript" src="./myscript.js"></script>
 </body>
